[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdn"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "tpg @ git+https://codeberg.org/cdsoft/tpg.git",
    "dparser",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["pdn_reading_tpg", "pdn_writing_tpg"]
