[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdn"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "tpg @ git+https://codeberg.org/cdsoft/tpg.git",
]

[project.optional-dependencies]
# dparser 1.37 (Cython-based) is required for Python 3.12+ support.
# Install from ../github-dparser/python: pip install --no-build-isolation -e ../github-dparser/python
dparser = ["dparser>=1.37"]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["pdn_reading_tpg", "pdn_writing_tpg"]
