[build-system]
requires = ["setuptools>=61"]
build-backend = "_build_backend"
backend-path = ["."]

[project]
name = "pdn"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "tpg @ git+https://codeberg.org/cdsoft/tpg.git",
    "antlr4-python3-runtime==4.13.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["pdn_reading_tpg", "pdn_writing_tpg"]
packages = ["pdn_antlr"]
